--- a/frontend/dados.html
+++ b/frontend/dados.html
@@ -15,7 +15,7 @@
 				<a class="nav-item nav-link" href="/frontend/index.html">Home</a>
 				<a class="nav-item nav-link active" href="/frontend/lista.html">Lista <span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link" href="/frontend/cadastro.html">Cadastramento</a>
-				<a class="nav-item nav-link" href="/frontend/dados.html">Dados</a>
+				<a class="nav-item nav-link active" href="/frontend/dados.html">Dados <span class="sr-only">(current)</span></a>
 			</div>
 		</div>
 	</nav>
@@ -25,9 +25,8 @@
 	    		<thead class="thead-dark"> 
 	    			<tr> 
 	    				<th> # </th>
-	    				<th> Fabricante </th>
-	    				<th> Modelo </th>
-	    				<th> Endereco IP</th> 
+	    				<th>Valor</th>
+	    				<th>Endereco IP</th> 
 	    			</tr>
 	    		</thead>
 	    		<tbody>
@@ -40,6 +39,6 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="js/lista.js"></script>
+	<script src="js/dados.js"></script>
 </body>
 </html>
