--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -15,6 +15,7 @@
 				<a class="nav-item nav-link" href="/frontend/index.html">Home</a>
 				<a class="nav-item nav-link" href="/frontend/lista.html">Lista</a>
 				<a class="nav-item nav-link active" href="/frontend/cadastro.html">Cadastramento <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="/frontend/dados.html">Dados</a>
 			</div>
 		</div>
 	</nav>
